Revise README with PDDL4J installation and compilation
Updated installation instructions for PDDL4J and added compilation steps.